# Clustering_Model_Coffee_Quality_with_PCA_t-SNE

./: LICENSE  README.md  clustering_analysis.ipynb  pyproject.toml
